--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -53,7 +53,7 @@ header{
     height:100vh;
     width:100%;
     background-repeat: no-repeat;
-    background-image: url(../images/jefferson.jpg);
+    background-image:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(../images/jefferson.jpg);
     background-size: cover;
     position: relative;
     background-position: center center;
