--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -77,6 +77,7 @@ header{
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+    max-width: 760px;
     color:#fff;
 }
 .header-container div.hero-section h1{
@@ -126,8 +127,95 @@ li.sign-up {
 3. Main Body Content
 *****************************************************
 ****************************************************/
+.main{
+    padding:60px 45px;
+    background-color: #fff;
+}
+.main-inner {
+    font-family: "Montserrat", sans-serif;
+    max-width: 1200px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat( 2, minmax(300px, 1fr) );
+    grid-column-gap:40px;
+}
+.main-inner .left-column{
+    grid-column:1/2;
+}
+.main-inner .right-column{
+    grid-column:2/-1;
+}
+.blue{
+    color:#AAE7FF;
+    font-size: 0.9em;
+    display: block!important;
+    font-weight: bold;
+}
+.left-column h2{
+    font-weight: 700;
+    font-size: 2rem;
+    color:#000;
+    margin-bottom:2rem;
+}
+.left-column p{
+    line-height: 1.65;
+}
+.left-column a{
+    color:#2488ED;
+    border:2px solid #52a1f1;
+    background-color: #fff;
+    border-radius: 50px;
+    padding: 1rem;
+    display: inline-block;
+    font-weight: 500;
+    transition: all 0.3s;
+}
+.left-column a:hover{
+    border-color: #52a1f1;
+    background-color: #52a1f1 !important;
+    color: #ffffff;
+}
+section.hero{
+    padding:60px 45px;
+    background-color: #2F3338;
+}
+section.hero-inner {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+h2.hero-heading-inner {
+    text-align: center;
+    color: #FFF !important;
+    font-weight: 300;
+    letter-spacing: 3px;
+}
+hr.line-br {
+    width: 145px;
+    margin: auto;
+    border: 1px solid #2488ED;
+    margin-bottom: 38px;
+}
 
 
+.featured-inner {
+    display: grid;
+    grid-template-columns:repeat(auto-fit,minmax(300px,1fr));
+}
+aside{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+aside.content i {
+    font-size: 2.8rem;
+}
+aside h3{
+    color:#FFF;
+}
+aside p{
+    text-align: center;
+    line-height: 1.5;
+}
 /*****************************************************
 *****************************************************
 4. Footer Content
