Created link hover for icons

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -236,7 +236,7 @@ footer a{
     display: flex;
     align-items: center;
     justify-content: center;
-
+    margin-bottom: 1em;
 }
 .icons a{
     padding:1rem;
