Last Commit for footer

--- a/assets/css/style-guide.css
+++ b/assets/css/style-guide.css
@@ -9,6 +9,7 @@ COLOR GUIDE:
 # Mid Grey : #666
 # Grey :#707070
 # white : background-color
+# #F1F3F7 (Footer) :background-color
 
 
 *******************************************************
