--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -142,13 +142,16 @@ li.sign-up {
     margin: 0 auto;
     display: grid;
     grid-template-columns: repeat( 2, minmax(300px, 1fr) );
-    grid-column-gap:40px;
+    grid-column-gap:24px;
 }
 .main-inner .left-column{
     grid-column:1/2;
 }
 .main-inner .right-column{
     grid-column:2/-1;
+}
+.txt-type > .txt{
+    border-right:0.2rem solid #777;
 }
 .blue{
     color:#AAE7FF;
